# python-appnlp

./: INSTALL.txt  LICENSE.txt  MANIFEST.in  README.txt  nlpstart.py  run.py  setup.cfg  setup.py
botnlp/: __init__.py  core.py  exceptions.py  functions.py  search.py  train.py  worker.py
botnlp/nlu/models/: core.py  keyedvectors.py  preprocessor.py  semantics.py  transformers.py  vectorization.py  word2vec.py
botnlp/nlu/thesaurus/: word2vec.py
botnlp/nlu/tokenization/: __init__.py  default.py  english.py  russian.py  semantic.py  ukrainian.py  vocab.py
botnlp/resources/: common.py  core.py
botnlp/storage/: __init__.py  adapter.py  content.py  datastore.py  mongodb.py  sql.py
botnlp/storage/contentchemy/: models.py  settings.py
botnlp/storage/extend/: abstract_models.py  settings.py
botnlp/storage/sqlalchemy/: models.py
botnlp/utils/: languages.py  ssl.py
botnlp/utils/tree/: kdtree.py
dataset/slang/: russian.csv
twisted/plugins/: botnlp_plugin.py
