[wheel]
universal = 1

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[nosetests]
verbosity = 2
nocapture = true
with-coverage = true
cover-package = botnlp
cover-erase = true
cover-min-percentage = 40

[botnlp]
version = 2.3.8b1
author = LCS ICS, Developer Center
email = kolobizok@gmail.com
url=https://github.com/ics-klb/python-appnlp

[languages]
enabled = eng,rus
interface_languages = eng,rus

[db]
host=localost
port=3306
username = root
userpasswd = passwd

[sockets]
host = localhost
port = 8073
tagger_port = 20807
thread_host=localhost
thread_port=8075

[tags]
use_tags = false
detect_tag = false
tag_pos=PRCL CONJ NPRO
tags_list = ADJ ADV INTJ NOUN PROPN VERB ADP AUX CCONJ DET NUM PART PRON SCONJ PUNCT SYM X
exposed_tags_list = tags.tsv

[token]
use_contextualized = false

[dataset]
rootpath=/mnt/content/dataset
sourcepath=dataset
results=dataset/results
nltkdata=dataset/nltk_data
vocabulary=dataset/vocabulary
stanford=dataset/stanford
panchenko=dataset/panchenko
panchenkonorm=dataset/russian/norm/all.norm-sz100-w10-cb0-it1-min100.w2v
